--- a/PlantAlarm/Views/NewPlantPage.xaml
+++ b/PlantAlarm/Views/NewPlantPage.xaml
@@ -4,6 +4,7 @@
              x:Class="PlantAlarm.Views.NewPlantPage"
              xmlns:customControls="clr-namespace:PlantAlarm.CustomControls"
              xmlns:customEffects="clr-namespace:PlantAlarm.Effects"
+             xmlns:customBehaviors="clr-namespace:PlantAlarm.Behaviors"
              Title="New Plant">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Command="{Binding AddPlantCommand}" />
@@ -43,20 +44,28 @@
                     VerticalOptions="Center" Margin="0,20,0,0" />
             <BoxView HeightRequest="1" Margin="-5,0,-5,0" Color="Black" />
             <Label Text="You will be able to add more pictures later to track your progress." TextColor="Gray" FontAttributes="Italic"
-                   Margin="0,5,0,0" FontSize="11"/>
+                   Margin="0,5,0,5" FontSize="11" />
             <customControls:SquaredImageContainerStack HorizontalOptions="FillAndExpand">
                 <Grid>
-                    <ImageButton Source="AddButtonGreen.png" VerticalOptions="Center" HorizontalOptions="Center"
+                    <ImageButton Source="AddButtonGreen.png" VerticalOptions="Center" HorizontalOptions="CenterAndExpand"
                                  Command="{Binding AddPhotoCommand}" />
-                    <customControls:SquaredImage Source="{Binding PhotoToAdd.Url}" HorizontalOptions="FillAndExpand"
-                                                 Aspect="AspectFill" IsVisible="{Binding HasPhoto}">
-                        <customControls:SquaredImage.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ShowPhotoOptionsCommand}" />
-                        </customControls:SquaredImage.GestureRecognizers>
-                        <customControls:SquaredImage.Effects>
-                            <customEffects:RoundedCornerEffect Radius="7" />
-                        </customControls:SquaredImage.Effects>
-                    </customControls:SquaredImage>
+                    <StackLayout IsVisible="{Binding HasPhoto}">
+                        <customControls:SquaredImage Source="{Binding PhotoToAdd.Url}" HorizontalOptions="FillAndExpand"
+                                                     Aspect="AspectFill">
+                            <customControls:SquaredImage.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding ShowPhotoOptionsCommand}" />
+                            </customControls:SquaredImage.GestureRecognizers>
+                            <customControls:SquaredImage.Effects>
+                                <customEffects:RoundedCornerEffect Radius="7" />
+                            </customControls:SquaredImage.Effects>
+                        </customControls:SquaredImage>
+                        <Label Text="You can change the photo by tapping it." TextColor="Gray" FontAttributes="Italic"
+                               Margin="0,5,0,5" FontSize="11" />
+
+                        <StackLayout.Behaviors>
+                            <customBehaviors:FadingBehavior />
+                        </StackLayout.Behaviors>
+                    </StackLayout>
                 </Grid>
             </customControls:SquaredImageContainerStack>
         </StackLayout>
