--- a/PlantAlarm/Views/PlantDetailsPage.xaml
+++ b/PlantAlarm/Views/PlantDetailsPage.xaml
@@ -9,8 +9,11 @@
     <ContentPage.Content>
         <ScrollView Margin="0,10">
             <StackLayout Margin="10,0,10,10">
-                <Label Text="Progress Pictures" FontAttributes="Bold" FontSize="22" VerticalOptions="Start" Margin="0,10,0,3"/>
-                <BoxView Color="Black" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="-5,0,-5,0"/>
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Progress Pictures" FontAttributes="Bold" FontSize="22" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                    <Button Text="Add" Command="{Binding AddNewPicturesCommand}" HorizontalOptions="End" FontSize="16" VerticalOptions="Center"/>
+                </StackLayout>
+                <BoxView Color="Black" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="-5,-10,-5,0"/>
                 <CollectionView ItemsSource="{Binding PhotoViewModels}" VerticalOptions="Start" Margin="0,5,-5,15"
                                 ItemsLayout="HorizontalList" HorizontalScrollBarVisibility="Never" HeightRequest="90">
                     <CollectionView.ItemTemplate>
@@ -28,8 +31,8 @@
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
-                <Label Text="Upcoming tasks" FontAttributes="Bold" FontSize="22" VerticalOptions="Start" Margin="0,0,0,3"/>
-                <BoxView Color="Black" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="-5,0,-5,0"/>
+                <Label Text="Upcoming tasks" FontAttributes="Bold" FontSize="22" VerticalOptions="Start" Margin="0,0,0,0"/>
+                <BoxView Color="Black" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="-5,0,-5,2"/>
                 <CollectionView ItemsSource="{Binding UpcomingActivities}" VerticalOptions="Start" HeightRequest="275" VerticalScrollBarVisibility="Never">
                     <CollectionView.ItemsLayout>
                         <LinearItemsLayout Orientation="Vertical" ItemSpacing="7" />
@@ -74,6 +77,12 @@
                             </StackLayout>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
+                    <CollectionView.EmptyView>
+                        <StackLayout>
+                            <Label Text="You haven't assigned any tasks to this plant yet." FontAttributes="Italic" FontSize="12"
+                                   TextColor="Gray" />
+                        </StackLayout>
+                    </CollectionView.EmptyView>
                 </CollectionView>
             </StackLayout>
         </ScrollView>
