--- a/PlantAlarm/CustomControls/CalendarDayViewCell.xaml
+++ b/PlantAlarm/CustomControls/CalendarDayViewCell.xaml
@@ -2,11 +2,11 @@
 <ViewCell xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="PlantAlarm.CustomControls.CalendarDayViewCell">
     <ViewCell.View>
         <StackLayout Rotation="90" Margin="-5,-8,3,0">
-            <Label Text="{Binding MonthName}" TextColor="Silver" FontSize="9"
+            <Label Text="{Binding MonthName}" TextColor="#508AE9" FontSize="9"
                    HorizontalOptions="Center"/>
-            <Label Text="{Binding Day}" FontAttributes="Bold" FontSize="16"
+            <Label Text="{Binding Day}" FontAttributes="Bold" FontSize="16" TextColor="Black"
                    HorizontalOptions="Center" Margin="0,-5,0,0" />
-            <Label Text="{Binding DayName}" FontSize="10" HorizontalOptions="Center" Margin="0,-5,0,0" />
+            <Label Text="{Binding DayName}" FontSize="10" HorizontalOptions="Center" Margin="0,-5,0,0" TextColor="Black"/>
         </StackLayout>
     </ViewCell.View>
 </ViewCell>
