--- a/PlantAlarm/Views/PlantDetailsPage.xaml
+++ b/PlantAlarm/Views/PlantDetailsPage.xaml
@@ -7,83 +7,104 @@
              xmlns:behaviors="clr-namespace:PlantAlarm.Behaviors"
              Title="{Binding Plant.Name}">
     <ContentPage.Content>
-        <ScrollView Margin="0,10">
-            <StackLayout Margin="10,0,10,10">
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Progress Pictures" FontAttributes="Bold" FontSize="22" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                    <Button Text="Add" Command="{Binding AddNewPicturesCommand}" HorizontalOptions="End" FontSize="16" VerticalOptions="Center"/>
+        <ScrollView BackgroundColor="#EAF7F2">
+            <StackLayout Padding="10">
+
+                <StackLayout BackgroundColor="#21D395" Padding="8,8,8,0">
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Progress Pictures" FontAttributes="Bold" FontSize="22" HorizontalOptions="StartAndExpand" VerticalOptions="Center"
+                               TextColor="White"/>
+                        <Button Text="Add" Command="{Binding AddNewPhotoCommand}" HorizontalOptions="End" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"
+                                TextColor="White" BackgroundColor="#199A6D" BorderRadius="5" Padding="5,0,5,0" HeightRequest="25"/>
+                    </StackLayout>
+                    <BoxView Color="White" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="-3,0,-3,0"/>
+                    <CollectionView ItemsSource="{Binding PhotoViewModels}" VerticalOptions="Start" Margin="0,5,0,0"
+                                    ItemsLayout="HorizontalList" HorizontalScrollBarVisibility="Never" HeightRequest="118">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout Padding="0,0,5,0">
+                                    <Image HeightRequest="90" WidthRequest="90" Aspect="AspectFill" Source="{Binding Photo.Url}">
+                                        <Image.Effects>
+                                            <customEffects:RoundedCornerEffect Radius="7" />
+                                            <customEffects:BorderEffect Thickness="1.5" Color="White" />
+                                        </Image.Effects>
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding TappedCommand}" CommandParameter="{Binding Photo}" />
+                                        </Image.GestureRecognizers>
+                                    </Image>
+                                    <Label Text="{Binding Photo.TakenAt, StringFormat='{0:MMM dd}'}" FontSize="12" TextColor="#EAF7F2" FontAttributes="Italic"
+                                           HorizontalOptions="Center" Margin="0,-2,0,0"/>
+                                </StackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+
+                    <StackLayout.Effects>
+                        <customEffects:RoundedCornerEffect Radius="8" />
+                    </StackLayout.Effects>
                 </StackLayout>
-                <BoxView Color="Black" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="-5,-10,-5,0"/>
-                <CollectionView ItemsSource="{Binding PhotoViewModels}" VerticalOptions="Start" Margin="0,5,-5,15"
-                                ItemsLayout="HorizontalList" HorizontalScrollBarVisibility="Never" HeightRequest="90">
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout Padding="0,0,5,0">
-                                <Image HeightRequest="80" WidthRequest="80" Aspect="AspectFill" Source="{Binding Photo.Url}">
-                                    <Image.Effects>
-                                        <customEffects:RoundedCornerEffect Radius="7" />
-                                    </Image.Effects>
-                                    <Image.GestureRecognizers>
-                                        <TapGestureRecognizer Command="{Binding TappedCommand}" CommandParameter="{Binding Photo}" />
-                                    </Image.GestureRecognizers>
-                                </Image>
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-                <Label Text="Upcoming tasks" FontAttributes="Bold" FontSize="22" VerticalOptions="Start" Margin="0,0,0,0"/>
-                <BoxView Color="Black" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="-5,0,-5,2"/>
-                <CollectionView ItemsSource="{Binding UpcomingActivities}" VerticalOptions="Start" HeightRequest="275" VerticalScrollBarVisibility="Never">
-                    <CollectionView.ItemsLayout>
-                        <LinearItemsLayout Orientation="Vertical" ItemSpacing="7" />
-                     </CollectionView.ItemsLayout>
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
+
+                <StackLayout Margin="0,0,0,0" BackgroundColor="#199A6D" Padding="8">
+                    <Label Text="Upcoming tasks" FontAttributes="Bold" FontSize="22" VerticalOptions="Start" TextColor="White"/>
+                    <BoxView Color="White" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="-3,0,-3,2"/>
+                    <CollectionView ItemsSource="{Binding UpcomingActivities}" VerticalOptions="Start" HeightRequest="275" VerticalScrollBarVisibility="Never"
+                                    x:Name="UpcomingTasksColView">
+                        <CollectionView.ItemsLayout>
+                            <LinearItemsLayout Orientation="Vertical" ItemSpacing="7" />
+                        </CollectionView.ItemsLayout>
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout>
+                                    <Grid HeightRequest="42" VerticalOptions="StartAndExpand">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="3*" />
+                                            <ColumnDefinition Width="2*" />
+                                        </Grid.ColumnDefinitions>
+                                        <StackLayout Grid.Column="0">
+                                            <Label Text="{Binding PlantTask.Name}" FontSize="15" LineBreakMode="TailTruncation" TextColor="White"/>
+                                            <Label Text="{Binding PlantActivityItem.Time, StringFormat='{0:MMM dd}'}" FontSize="13"
+                                                   FontAttributes="Italic" TextColor="#71E3BB"/>
+                                        </StackLayout>
+                                        <CollectionView ItemsSource="{Binding PrimaryPhotoOfPlantsInTask}" VerticalOptions="FillAndExpand" Grid.Column="1"
+                                                        HeightRequest="42">
+                                            <CollectionView.ItemTemplate>
+                                                <DataTemplate>
+                                                    <StackLayout WidthRequest="40" HeightRequest="40" VerticalOptions="Center">
+                                                        <customControls:SquaredImage Source="{Binding Url}" Margin="0,0,0,0" HeightRequest="30" BackgroundColor="Green"
+                                                                                     VerticalOptions="Center" Aspect="AspectFill">
+                                                            <customControls:SquaredImage.Effects>
+                                                                <customEffects:RoundedCornerEffect Radius="20"/>
+                                                                <customEffects:BorderEffect Thickness="1.5" Color="White" />
+                                                            </customControls:SquaredImage.Effects>
+                                                        </customControls:SquaredImage>
+                                                    </StackLayout>
+                                                </DataTemplate>
+                                            </CollectionView.ItemTemplate>
+                                            <CollectionView.ItemsLayout>
+                                                <LinearItemsLayout Orientation="Horizontal" />
+                                            </CollectionView.ItemsLayout>
+                                            <CollectionView.Effects>
+                                                <customEffects:OverlappingEffect Size="25"/>
+                                            </CollectionView.Effects>
+                                        </CollectionView>
+                                    </Grid>
+                                    <BoxView Color="#1CAD7A" HorizontalOptions="FillAndExpand" HeightRequest="1" />
+                                </StackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                        <CollectionView.EmptyView>
                             <StackLayout>
-                                <Grid HeightRequest="42" VerticalOptions="StartAndExpand">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="3*" />
-                                        <ColumnDefinition Width="2*" />
-                                    </Grid.ColumnDefinitions>
-                                    <StackLayout Grid.Column="0">
-                                        <Label Text="{Binding PlantTask.Name}" FontSize="15" LineBreakMode="TailTruncation"/>
-                                        <Label Text="{Binding PlantActivityItem.Time, StringFormat='{0:MMM dd}'}" FontSize="13"
-                                               FontAttributes="Italic" TextColor="Gray"/>
-                                    </StackLayout>
-                                    <CollectionView ItemsSource="{Binding PrimaryPhotoOfPlantsInTask}" VerticalOptions="FillAndExpand" Grid.Column="1"
-                                                    HeightRequest="42">
-                                        <CollectionView.ItemTemplate>
-                                            <DataTemplate>
-                                                <StackLayout WidthRequest="40" HeightRequest="40" VerticalOptions="Center">
-                                                    <customControls:SquaredImage Source="{Binding Url}" Margin="0,0,0,0" HeightRequest="30" BackgroundColor="Green"
-                                                                                 VerticalOptions="Center" Aspect="AspectFill">
-                                                        <customControls:SquaredImage.Effects>
-                                                            <customEffects:RoundedCornerEffect Radius="20"/>
-                                                            <customEffects:BorderEffect Thickness="0.5" />
-                                                        </customControls:SquaredImage.Effects>
-                                                    </customControls:SquaredImage>
-                                                </StackLayout>
-                                            </DataTemplate>
-                                        </CollectionView.ItemTemplate>
-                                        <CollectionView.ItemsLayout>
-                                            <LinearItemsLayout Orientation="Horizontal" />
-                                        </CollectionView.ItemsLayout>
-                                        <CollectionView.Effects>
-                                            <customEffects:OverlappingEffect Size="25"/>
-                                        </CollectionView.Effects>
-                                    </CollectionView>
-                                </Grid>
-                                <BoxView Color="LightGray" HorizontalOptions="FillAndExpand" HeightRequest="1" />
+                                <Label Text="You haven't assigned any tasks to this plant yet." FontAttributes="Italic" FontSize="12"
+                                       TextColor="#AEEFD8" />
                             </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                    <CollectionView.EmptyView>
-                        <StackLayout>
-                            <Label Text="You haven't assigned any tasks to this plant yet." FontAttributes="Italic" FontSize="12"
-                                   TextColor="Gray" />
-                        </StackLayout>
-                    </CollectionView.EmptyView>
-                </CollectionView>
+                        </CollectionView.EmptyView>
+                    </CollectionView>
+
+                    <StackLayout.Effects>
+                        <customEffects:RoundedCornerEffect Radius="8" />
+                    </StackLayout.Effects>
+                </StackLayout>
+                
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
